added a new background gradient and contract position div

--- a/resume-website/index.html
+++ b/resume-website/index.html
@@ -138,6 +138,27 @@
             <h1>Scotiabank</h1>
           </div>
           <br>
+          <h3>Software Engineer (CONTRACT)</h3>
+          <p>July 2021 - November 2021</p>
+          <ul id='job_tasks'>
+            <li><i class="devicon-atom-original"></i> Implemented automated ETL pipelines utilizing Apache Nifi and Pandas resulting in improved data flow and increased work efficiency across teams. This automated solution has replaced the manual process and reduced the average processing time by 90%.</li>
+            <li><i class="devicon-atom-original"></i> Authored comprehensive technical and support documentation for multiple applications, ensuring clarity for both technical and non-technical teams.</li>
+            <li><i class="devicon-atom-original"></i> Actively participated in various agile methodologies such as user story grooming, sprint planning, sprint retrospective, kanban board, Confluence, and Jira, resulting in an improvement in project delivery time by 50%.</li>
+          </ul>
+          <p>Tech Stack: 
+            <i class="devicon-python-plain-wordmark colored" style="font-size: 2.5em;"></i> 
+            <i class="devicon-postgresql-plain-wordmark colored" style="font-size: 2.5em;"></i>
+            <i class="devicon-scala-plain-wordmark colored" style="font-size: 2.5em;"></i>
+           
+          </p>
+        </li>
+        <br>
+        <li>
+          <div>
+            <img id="job-icon" src="scotia-icon.png" alt="Scotia Icon">
+            <h1>Scotiabank</h1>
+          </div>
+          <br>
           <h3>Software Engineer Intern</h3>
           <p>May 2020 - August 2020</p>
           <ul id='job_tasks'>
@@ -220,7 +241,7 @@
 
     <section id="contact">
       <h2>Socials</h2>
-      <a href='https://github.com/denkuz22'><i class="fa fa-github" style="font-size:60px"></i></a>
+      <a href='https://github.com/denkuz22'><i class="fa fa-github" style="font-size:60px;color: white;"></i></a>
       <a href='https://www.linkedin.com/in/denis-kuznetsov-64679b163/'><i class="fa fa-linkedin-square" style="font-size:60px;color:rgb(89, 183, 241)"></i></a>
     </section>
 
